--- a/packages/contracts/evm-contracts/tsconfig.json
+++ b/packages/contracts/evm-contracts/tsconfig.json
@@ -1,11 +1,10 @@
 {
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2020",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
-  }
+    "outDir": "build/plugin",
+    "rootDir": "src",
+    "noEmit": false,
+  },
+  "include": ["./src/**/*"],
 }
