--- a/packages/contracts/evm-contracts/package.json
+++ b/packages/contracts/evm-contracts/package.json
@@ -33,6 +33,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "hardhat": "^2.19.3",
     "hardhat-abi-exporter": "^2.10.1",
+    "solidity-docgen": "^0.6.0-beta.36",
     "ts-node": "^10.9.1"
   },
   "peerDependencies": {
