--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,7 @@
       "files": "*.sol",
       "options": {
         "tabWidth": 4,
+        "singleQuote": false,
         "arrowParens": "avoid",
         "parser": "solidity-parse"
       }
