--- a/packages/contracts/evm-contracts/package.json
+++ b/packages/contracts/evm-contracts/package.json
@@ -8,11 +8,12 @@
     "/build"
   ],
   "scripts": {
-    "compile": "forge build && npx hardhat compile && hardhat docgen",
     "test": "forge test",
-    "build": "rm -rf ./build && tsc --build .",
+    "build:contracts": "forge build && npx hardhat compile && hardhat docgen",
+    "build:plugin": "rm -rf ./build && tsc --build .",
+    "build": "npm run build:contracts && npm run build:plugin",
     "prettier": "prettier --write '**/*.{sol,js,ts}' --ignore-path .gitignore",
-    "publish": "rm -rf ./publish && npm run build && npm run compile && ./prepare.sh"
+    "release": "rm -rf ./publish && npm run build && ./prepare.sh && (cd ./publish && npm publish)"
   },
   "keywords": [
     "solidity",
@@ -30,7 +31,6 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
     "@openzeppelin/contracts": "^4.6.0",
-    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "hardhat": "^2.19.3",
     "hardhat-abi-exporter": "^2.10.1",
     "solidity-docgen": "^0.6.0-beta.36",
@@ -40,6 +40,7 @@
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
+    "@openzeppelin/contracts": "^4.6.0",
     "hardhat": "^2.19.3"
   }
 }
