fix evm-contracts build order

--- a/packages/contracts/evm-contracts/package.json
+++ b/packages/contracts/evm-contracts/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
+    "clean": "rm -rf ./artifacts && rm -rf ./cache && rm -rf ./publish && rm -rf ./build",
     "test": "forge test",
     "build:contracts": "forge build && npx hardhat compile && hardhat docgen",
     "build:plugin": "rm -rf ./build && tsc --build .",
-    "build": "npm run build:contracts && npm run build:plugin",
+    "build": "npm run build:plugin && npm run build:contracts",
     "prettier": "prettier --write '**/*.{sol,js,ts}' --ignore-path .gitignore",
     "release": "rm -rf ./publish && npm run build && ./prepare.sh && (cd ./publish && npm publish --access public)"
   },
