--- a/packages/engine/paima-standalone/package.json
+++ b/packages/engine/paima-standalone/package.json
@@ -31,7 +31,8 @@
       "./contracts/**/*",
       "./batcher/**/*",
       "./documentation/**/*",
-      "./swagger-ui/**/*"
+      "./swagger-ui/**/*",
+      "./cardano_multiplatform_lib_bg.wasm"
     ],
     "targets": [
       "node20-linux-x64",
