--- a/packages/engine/paima-standalone/package.json
+++ b/packages/engine/paima-standalone/package.json
@@ -8,6 +8,7 @@
   "types": "build/index.d.ts",
   "type": "module",
   "nx": {
+    "tags": ["type:binary"],
     "targets": {
       "release": {
         "dependsOn": ["build", "^release"],
