--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "baseUrl": "./",
-    "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
     "declaration": true,
     "preserveConstEnums": true,
@@ -35,21 +35,21 @@
       "@paima/batcher-utils/*": ["./packages/batcher/utils/*"],
       "@paima/batcher-webserver/*": ["./packages/batcher/webserver/*"],
       "@paima/build-utils/*": ["./packages/build-utils/paima-build-utils/*"],
-      "@paima/db/*": ["./packages/node-sdk/paima-db/*"],
-      "@paima/evm-contracts/*": ["./packages/contracts/evm-contracts/*"],
-      "@paima/node-sdk/*": ["./packages/node-sdk/publish-wrapper/*"],
-      "@paima/utils-backend/*": ["./packages/node-sdk/paima-utils-backend/*"],
       "@paima/concise/*": ["./packages/paima-sdk/paima-concise/*"],
       "@paima/crypto/*": ["./packages/paima-sdk/paima-crypto/*"],
+      "@paima/db/*": ["./packages/node-sdk/paima-db/*"],
+      "@paima/evm-contracts/*": ["./packages/contracts/evm-contracts/*"],
       "@paima/executors/*": ["./packages/paima-sdk/paima-executors/*"],
       "@paima/funnel/*": ["./packages/engine/paima-funnel/*"],
       "@paima/mw-core/*": ["./packages/paima-sdk/paima-mw-core/*"],
+      "@paima/node-sdk/*": ["./packages/node-sdk/publish-wrapper/*"],
       "@paima/prando/*": ["./packages/paima-sdk/paima-prando/*"],
       "@paima/providers/*": ["./packages/paima-sdk/paima-providers/*"],
       "@paima/rest/*": ["./packages/engine/paima-rest/*"],
       "@paima/runtime/*": ["./packages/engine/paima-runtime/*"],
       "@paima/sdk/*": ["./packages/paima-sdk/paima-sdk/*"],
       "@paima/sm/*": ["./packages/engine/paima-sm/*"],
+      "@paima/utils-backend/*": ["./packages/node-sdk/paima-utils-backend/*"],
       "@paima/utils/*": ["./packages/paima-sdk/paima-utils/*"],
       "@standalone/paima-batcher/*": ["./packages/batcher/batcher-standalone/*"],
       "@standalone/paima-engine/*": ["./packages/engine/paima-standalone/*"]
