No longer bump build-utils for every release

--- a/packages/build-utils/paima-build-utils/package.json
+++ b/packages/build-utils/paima-build-utils/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "description": "Util functions to build Paima projects for various platforms",
+  "description": "Util functions to build the core parts of Paima projects",
   "exports": {
     "./*": {
       "import": "./build/esm/*.mjs",
