--- a/packages/batcher/runtime/tsconfig.json
+++ b/packages/batcher/runtime/tsconfig.json
@@ -13,5 +13,6 @@
     { "path": "../../paima-sdk/paima-providers/tsconfig.build.json" },
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-utils-backend" },
+    { "path": "../../paima-sdk/paima-mw-core/tsconfig.json" },
   ]
 }
