--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
   },
   "workspaces": [
     "./packages/*/*"
-  ]
+  ],
+  "dependencies": {
+    "@dcspark/cardano-multiplatform-lib-nodejs": "^5.2.0"
+  }
 }
