--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "assert-never": "^1.2.1",
-    "@dcspark/carp-client": "file:../../../tmp-carp-client",
+    "@dcspark/carp-client": "^3.1.0",
     "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0"
   }
 }
