--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "assert-never": "^1.2.1",
     "@dcspark/carp-client": "^3.1.0",
-    "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0"
+    "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0",
+    "postgres": "^3.3.5"
   }
 }
