--- a/packages/batcher/webserver/package.json
+++ b/packages/batcher/webserver/package.json
@@ -10,6 +10,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.11.3"
