--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -21,6 +21,7 @@
     "@dcspark/carp-client": "^3.1.0",
     "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0",
     "pg": "^8.11.3",
-    "avail-js-sdk": "^0.2.12"
+    "avail-js-sdk": "^0.2.12",
+    "@polkadot/util-crypto": "^12.6.2"
   }
 }
