--- a/packages/contracts/mina-contracts/package.json
+++ b/packages/contracts/mina-contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/mina-contracts",
-  "version": "0.0.0",
+  "version": "3.1.0",
   "description": "Mina programs and contracts for the Paima ecosystem",
   "author": "Paima Studios",
   "license": "MIT",
@@ -9,7 +9,9 @@
     ".": "./build/index.js"
   },
   "files": [
-    "build"
+    "build",
+    "!build/postbuild.*",
+    "!build/test.*"
   ],
   "scripts": {
     "build": "tsc",
