--- a/packages/contracts/mina-contracts/tsconfig.json
+++ b/packages/contracts/mina-contracts/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
+
+    // TS decorator metadata is necessary for SmartContracts to compile.
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "include": ["./src"],
 }
