--- a/packages/mqtt/package.json
+++ b/packages/mqtt/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@paima/funnel",
+  "name": "@paima/mqtt",
   "version": "1.0.0",
-  "description": "Blockchain Data fetching library for Paima Engine",
+  "description": "MQTT Broker, Publisher and Listener",
   "type": "module",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -17,12 +17,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0",
-    "@dcspark/carp-client": "^3.1.0",
     "aedes": "^0.51.2",
     "aedes-server-factory": "^0.2.1",
     "assert-never": "^1.2.1",
-    "mqtt": "^5.7.3",
-    "pg": "^8.11.3"
+    "mqtt": "^5.7.3"
   }
 }
