--- a/packages/batcher/utils/package.json
+++ b/packages/batcher/utils/package.json
@@ -10,6 +10,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "assert-never": "^1.2.1"
+    "assert-never": "^1.2.1",
+    "avail-js-sdk": "^0.2.12"
   }
 }
