--- a/packages/paima-sdk/paima-providers/package.json
+++ b/packages/paima-sdk/paima-providers/package.json
@@ -34,6 +34,8 @@
     "bech32": "^2.0.0",
     "web3": "1.10.0",
     "web3-utils": "1.10.0",
-    "assert-never": "^1.2.1"
+    "assert-never": "^1.2.1",
+    "avail-js-sdk": "^0.2.12",
+    "@polkadot/api": "^12.0.2"
   }
 }
