Trash cache, since 700M is unreasonable to put on NPM

--- a/packages/contracts/mina-delegation/package.json
+++ b/packages/contracts/mina-delegation/package.json
@@ -9,15 +9,10 @@
     ".": "./build/index.js"
   },
   "files": [
-    "build",
-    "!build/postbuild.*",
-    "!build/test.*"
+    "build"
   ],
   "scripts": {
-    "build": "tsc",
-    "postbuild": "node build/postbuild.js && node build/postbuild.js",
-    "pretest": "npm run build",
-    "test": "node build/test.js"
+    "build": "tsc"
   },
   "keywords": [
     "mina",
