--- a/.prettierignore
+++ b/.prettierignore
@@ -5,3 +5,5 @@ packaged/
 packages/engine/paima-rest/src/tsoa/routes.ts
 packages/contracts/evm-contracts/test-lib
 packages/contracts/evm-contracts/typechain-types
+**/dist
+**/build
