--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,7 +39,7 @@
       "@paima/crypto/*": ["./packages/paima-sdk/paima-crypto/*"],
       "@paima/db/*": ["./packages/node-sdk/paima-db/*"],
       "@paima/evm-contracts/*": ["./packages/contracts/evm-contracts/*"],
-      "@paima/mina-contracts/*": ["./packages/contracts/mina-contracts/*"],
+      "@paima/mina-delegation/*": ["./packages/contracts/mina-delegation/*"],
       "@paima/executors/*": ["./packages/paima-sdk/paima-executors/*"],
       "@paima/funnel/*": ["./packages/engine/paima-funnel/*"],
       "@paima/mw-core/*": ["./packages/paima-sdk/paima-mw-core/*"],
