--- a/packages/engine/paima-sm/package.json
+++ b/packages/engine/paima-sm/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sinclair/typebox": "^0.31.28",
     "assert-never": "^1.2.1",
-    "@dcspark/carp-client": "^3.1.0"
+    "@dcspark/carp-client": "^3.1.0",
+    "web3-utils": "^4.3.0" 
   }
 }
