--- a/packages/paima-sdk/paima-mw-core/package.json
+++ b/packages/paima-sdk/paima-mw-core/package.json
@@ -40,6 +40,7 @@
     "@paima/providers": "2.4.0",
     "@paima/concise": "2.4.0",
     "@paima/prando": "2.4.0",
-    "assert-never": "^1.2.1"
+    "assert-never": "^1.2.1",
+    "js-sha256": "^0.9.0"
   }
 }
