--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -47,6 +47,7 @@
     "algosdk": "^2.3.0",
     "flatted": "^3.2.7",
     "web3": "1.10.0",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "@dcspark/cip34-js": "1.0.1"
   }
 }
