--- a/packages/node-sdk/paima-broker/tsconfig.json
+++ b/packages/node-sdk/paima-broker/tsconfig.json
@@ -1,16 +1,16 @@
+
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "rootDir": ".",
     "noEmit": true
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": [
+    "src/**/*",
+  ],
   "references": [
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
-    { "path": "../../node-sdk/paima-db" },
-    { "path": "../paima-rest/tsconfig.build.json" },
-    { "path": "../paima-sm" },
+    { "path": "../../batcher/utils" },
     { "path": "../../paima-sdk/paima-events/tsconfig.build.json" },
-    { "path": "../../node-sdk/paima-broker/tsconfig.build.json" },
   ]
 }
