--- a/packages/paima-sdk/paima-sdk/package.json
+++ b/packages/paima-sdk/paima-sdk/package.json
@@ -31,6 +31,7 @@
     "@paima/mw-core": "2.4.0",
     "@paima/prando": "2.4.0",
     "@paima/providers": "2.4.0",
-    "@paima/utils": "2.4.0"
+    "@paima/utils": "2.4.0",
+    "@paima/events": "2.4.0"
   }
 }
