--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,6 @@
     "noImplicitOverride": true,
     "skipLibCheck": true,
     "paths": {
-      // "@paima/mqtt/*": ["./packages/mqtt/*"],
       "@paima/batcher-address-validator/*": ["./packages/batcher/address-validator/*"],
       "@paima/batcher-db/*": ["./packages/batcher/db/*"],
       "@paima/batcher-game-input-validator/*": ["./packages/batcher/game-input-validator/*"],
@@ -35,10 +34,12 @@
       "@paima/batcher-transaction-poster/*": ["./packages/batcher/batcher-transaction-poster/*"],
       "@paima/batcher-utils/*": ["./packages/batcher/utils/*"],
       "@paima/batcher-webserver/*": ["./packages/batcher/webserver/*"],
+      "@paima/broker/*": ["./packagers/node-sdk/paima-broker/*"],
       "@paima/build-utils/*": ["./packages/build-utils/paima-build-utils/*"],
       "@paima/concise/*": ["./packages/paima-sdk/paima-concise/*"],
       "@paima/crypto/*": ["./packages/paima-sdk/paima-crypto/*"],
       "@paima/db/*": ["./packages/node-sdk/paima-db/*"],
+      "@paima/events/*": ["./packages/paima-sdk/paima-events/*"],
       "@paima/evm-contracts/*": ["./packages/contracts/evm-contracts/*"],
       "@paima/executors/*": ["./packages/paima-sdk/paima-executors/*"],
       "@paima/funnel/*": ["./packages/engine/paima-funnel/*"],
