--- a/packages/engine/paima-runtime/tsconfig.json
+++ b/packages/engine/paima-runtime/tsconfig.json
@@ -11,6 +11,6 @@
     { "path": "../../node-sdk/paima-db" },
     { "path": "../paima-rest/tsconfig.build.json" },
     { "path": "../paima-sm" },
-    // { "path": "../../node-sdk/paima-broker/tsconfig.build.json" },
+    { "path": "../../node-sdk/paima-broker/tsconfig.build.json" },
   ]
 }
