--- a/packages/node-sdk/paima-broker/package.json
+++ b/packages/node-sdk/paima-broker/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "tsc"
+    "build": "tsc --build tsconfig.build.json"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
