--- a/packages/paima-sdk/paima-events/tsconfig.json
+++ b/packages/paima-sdk/paima-events/tsconfig.json
@@ -5,9 +5,6 @@
     "rootDir": ".",
     "noEmit": true
   },
-  "include": [
-    "src/**/*",
-  ],
-  "references": [
-  ]
+  "include": ["test/**/*", "src/**/*"],
+  "references": []
 }
