Gitignore aiken.lock and plutus.json for now

--- a/packages/cardano-contracts/inverse-whirlpool/.gitignore
+++ b/packages/cardano-contracts/inverse-whirlpool/.gitignore
@@ -10,3 +10,7 @@ docs/
 src/seed.txt
 src/package-lock.json
 src/node_modules
+
+# Additional files that the Aiken compiler produces or modifies
+/aiken.lock
+/plutus.json
