--- a/packages/batcher/runtime/package.json
+++ b/packages/batcher/runtime/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "ethers": "6.11.1",
     "express": "^4.18.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "@paima/broker": "2.4.0"
   }
 }
