--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -21,7 +21,8 @@
     "json-stable-stringify": "^1.0.2",
     "openapi-merge": "^1.3.2",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "@paima/broker": "2.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
