Create new local SDK packing tool

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "npx nx run-many --parallel=${NX_PARALLEL:-3} -t prebuild",
     "build": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t build",
     "test": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t test",
+    "release:local": "npx ts-node ./tools/scripts/publish-local.ts",
     "release:lib": "./wipe.sh && sh ./tools/scripts/bump-version.sh && npm run build && npm run lint && npm run test && read -p 'Enter OTP: ' otp && export NPM_CONFIG_OTP=$otp && npx nx release publish -g paima-sdk && npx nx release publish -g node-sdk",
     "release:bin": "./wipe.sh && npm run lint:configs && npm run build && npx nx run-many --parallel=${NX_PARALLEL:-3} --projects=tag:type:binary -t release && mkdir -p ./bin && cp -rf ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
@@ -45,6 +46,7 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-solidity": "^1.3.1",
     "syncpack": "^11.2.1",
+    "tar": "^7.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
