Add missing packages to local SDK output

--- a/nx.json
+++ b/nx.json
@@ -43,6 +43,13 @@
       },
       "node-sdk": {
         "projects": ["directory:packages/node-sdk/*"]
+      },
+      "others": {
+        "projects": [
+          "directory:packages/cardano-contracts/*",
+          "directory:packages/contracts/*",
+          "directory:packages/build-utils/*"
+        ]
       }
     }
   }
