--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prebuild": "npx nx run-many --parallel=${NX_PARALLEL:-3} -t prebuild",
     "build": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t build",
     "test": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t test",
-    "release:local": "npx ts-node ./tools/scripts/publish-local.ts",
+    "release:local": "npm run build && ps aux | grep '[v]erdaccio' | awk '{print $2}' | xargs -r kill -9 && npx ts-node ./tools/scripts/publish-local.ts",
     "release:lib": "./wipe.sh && sh ./tools/scripts/bump-version.sh && npm run build && npm run lint && npm run test && read -p 'Enter OTP: ' otp && export NPM_CONFIG_OTP=$otp && npx nx release publish -g paima-sdk && npx nx release publish -g node-sdk",
     "release:bin": "./wipe.sh && npm run lint:configs && npm run build && npx nx run-many --parallel=${NX_PARALLEL:-3} --projects=tag:type:binary -t release && mkdir -p ./bin && cp -rf ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
