add missing @paima/precompiles exports

--- a/packages/paima-sdk/paima-sdk/tsconfig.json
+++ b/packages/paima-sdk/paima-sdk/tsconfig.json
@@ -18,6 +18,7 @@
     { "path": "../paima-concise/tsconfig.build.json" },
     { "path": "../paima-executors" },
     { "path": "../paima-mw-core" },
-    { "path": "../paima-events/tsconfig.build.json" }
+    { "path": "../paima-events/tsconfig.build.json" },
+    { "path": "../paima-precompiles/tsconfig.build.json" },
   ]
 }
