--- a/packages/cardano-contracts/inverse-whirlpool/aiken.toml
+++ b/packages/cardano-contracts/inverse-whirlpool/aiken.toml
@@ -1,5 +1,7 @@
 name = "paima/inverse-whirlpool"
 version = "0.0.0"
+compiler = "v1.0.29-alpha"
+plutus = "v2"
 license = "Apache-2.0"
 description = "Aiken contracts for project Cardano inverse projection"
 
@@ -19,6 +21,6 @@ version = "main"
 source = "github"
 
 [[dependencies]]
-name = "aiken-lang/sparse-merkle-tree"
-version = "main"
+name = "aiken-lang/merkle-patricia-forestry"
+version = "1.0.1"
 source = "github"
