add avail funnels (#385)
* (wip) add avail funnel

* implement the presync stage and fix some bugs

* restore the lastBlock state correctly and fix non inclusive range

* add internal event for checkpointing

* remove unused branch

* make the presync parallel (with the wrapped funnel)

* optimization: only get headers for blocks with data (and the latest)

* refactors and cleanup

* move findBlockByTimestamp to funnel utils

* refactoring: move some functions to a utils module + some renaming

* more refactoring

* move buildParallelBlockMappings function to funnel utils

* move getMultipleHeaderData to avail funnel utils

* move addInternalCheckpointingEvent to funnel utils

* move function to utils and move caching logic to the cache entry

* readFromBaseFunnel -> readFromWrappedFunnel

* improve cache update handling and add tx hash to the data

* add some (high) timeouts on network requests

* use the shared composeChainData function

* rename to AvailParallel funnel

* ignore explicit any lint for the babe digest parsing

* switch from extension to submittedData

* get latest available block from the light client instead of rpc

* merge the submittedData when composing

* add avail base funnel

* keep the rpc connections around in createApi

* add configuration for main avail layer (and make evm optional)

* base funnel: fill nonce in submittedData

* bump polkadot deps in other packages

* remove the api from the funnel cache since it's cached elsewhere

* cleanup some unused imports and lints

* add more specific narrow common api for paralell funnels

* add check for multiple main networks error

* deduplicate polkadot dependencies

* fix round data not read from the cache

* update package-lock and small mina update

* minor lint in createApi

* re-use the binary search function in parallel evm funnel

* re-use the block mapping function in parallelEvm funnel

* re-use the intern

--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -20,6 +20,8 @@
     "assert-never": "^1.2.1",
     "@dcspark/carp-client": "^3.1.0",
     "@dcspark/cardano-multiplatform-lib-nodejs": "5.2.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "avail-js-sdk": "^0.2.12",
+    "@polkadot/util-crypto": "^12.6.2"
   }
 }
