--- a/packages/node-sdk/paima-broker/package.json
+++ b/packages/node-sdk/paima-broker/package.json
@@ -23,8 +23,10 @@
     "build": "tsc --build tsconfig.build.json"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.3",
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "ip": "^2.0.1"
   }
 }
