Simplified events draft (#396)
* Simplified events draft

* Simplify even more

* lint fix

* make indexed optional, fix exports, rename fields

* MQTT async update

* move to qos2 by default

* eslint & bug fixes

* temp fix on packaeg resolution

* Create new local SDK packing tool

* Add missing packages to local SDK output

* more improvements to local SDK setup

* add missing @paima/precompiles exports

* fix paima-event bugs

* small eslint fix

* Fix topic generation & parsing bugs

* Better 'this' handling for events

* More fixes and improvements

* Make batcher filter indexable

* Fix incorrect casing on BatcherStatus

* Restrict event publishing just to localhost

* fix batcher localhost startup script

* Add localhost package check

* document edge-case on BatcherStatus updates

--- a/packages/paima-sdk/paima-events/package.json
+++ b/packages/paima-sdk/paima-events/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "tsc"
+    "build": "tsc --build tsconfig.build.json",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.3"
   },
   "dependencies": {
+    "mqtt": "^5.7.3",
+    "mqtt-pattern": "^2.1.0"
   }
 }
