--- a/packages/node-sdk/paima-broker/package.json
+++ b/packages/node-sdk/paima-broker/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "tsc"
+    "build": "tsc --build tsconfig.build.json"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/ip": "^1.1.3",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
+    "ip": "^2.0.1"
   }
 }
