fix env.process lookup

--- a/packages/paima-sdk/paima-events/tsconfig.json
+++ b/packages/paima-sdk/paima-events/tsconfig.json
@@ -6,5 +6,7 @@
     "noEmit": true
   },
   "include": ["test/**/*", "src/**/*"],
-  "references": []
+  "references": [
+    { "path": "../paima-utils/tsconfig.build.json" },
+  ]
 }
