--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "tar": "^7.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "verdaccio": "^5.31.1"
   },
   "overrides": {
     "web3-eth-contract": "1.10.0"
