--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "prebuild": "npx nx run-many --parallel=${NX_PARALLEL:-3} -t prebuild",
     "build": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t build",
     "test": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t test",
+    "clear:local": "npm set registry && ps aux | grep '[v]erdaccio' | awk '{print $2}' | xargs -r kill -9",
+    "release:local": "npm run build && npm run clear:local && npx ts-node ./tools/scripts/publish-local.ts",
     "release:lib": "./wipe.sh && sh ./tools/scripts/bump-version.sh && npm run build && npm run lint && npm run test && read -p 'Enter OTP: ' otp && export NPM_CONFIG_OTP=$otp && npx nx release publish -g paima-sdk && npx nx release publish -g node-sdk",
     "release:bin": "./wipe.sh && npm run lint:configs && npm run build && npx nx run-many --parallel=${NX_PARALLEL:-3} --projects=tag:type:binary -t release && mkdir -p ./bin && cp -rf ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
-    "@nx/esbuild": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/linter": "17.2.8",
+    "@nx/esbuild": "19.5.1",
+    "@nx/jest": "19.5.1",
+    "@nx/js": "19.5.1",
+    "@nx/linter": "19.5.1",
     "@types/eslint-plugin-prettier": "^3.1.3",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.11.0",
@@ -40,14 +42,16 @@
     "husky": "^8.0.3",
     "jest": "29.7.0",
     "json5": "^2.2.3",
-    "nx": "17.2.8",
+    "nx": "19.5.1",
     "prettier": "^3.2.2",
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-solidity": "^1.3.1",
     "syncpack": "^11.2.1",
+    "tar": "^7.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.3",
+    "verdaccio": "^5.31.1"
   },
   "overrides": {
     "web3-eth-contract": "1.10.0"
