--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,6 +27,7 @@
     "noImplicitOverride": true,
     "skipLibCheck": true,
     "paths": {
+      "@paima/aiken-mdx/*": ["./packages/cardano-contracts/aiken-mdx/*"],
       "@paima/batcher-address-validator/*": ["./packages/batcher/address-validator/*"],
       "@paima/batcher-db/*": ["./packages/batcher/db/*"],
       "@paima/batcher-game-input-validator/*": ["./packages/batcher/game-input-validator/*"],
@@ -34,17 +35,19 @@
       "@paima/batcher-transaction-poster/*": ["./packages/batcher/batcher-transaction-poster/*"],
       "@paima/batcher-utils/*": ["./packages/batcher/utils/*"],
       "@paima/batcher-webserver/*": ["./packages/batcher/webserver/*"],
+      "@paima/broker/*": ["./packagers/node-sdk/paima-broker/*"],
       "@paima/build-utils/*": ["./packages/build-utils/paima-build-utils/*"],
       "@paima/concise/*": ["./packages/paima-sdk/paima-concise/*"],
       "@paima/crypto/*": ["./packages/paima-sdk/paima-crypto/*"],
       "@paima/db/*": ["./packages/node-sdk/paima-db/*"],
-      "@paima/aiken-mdx/*": ["./packages/cardano-contracts/aiken-mdx/*"],
+      "@paima/events/*": ["./packages/paima-sdk/paima-events/*"],
       "@paima/evm-contracts/*": ["./packages/contracts/evm-contracts/*"],
       "@paima/executors/*": ["./packages/paima-sdk/paima-executors/*"],
       "@paima/funnel/*": ["./packages/engine/paima-funnel/*"],
       "@paima/mw-core/*": ["./packages/paima-sdk/paima-mw-core/*"],
       "@paima/node-sdk/*": ["./packages/node-sdk/publish-wrapper/*"],
       "@paima/prando/*": ["./packages/paima-sdk/paima-prando/*"],
+      "@paima/precompiles/*": ["./packages/paima-sdk/paima-precompiles/*"],
       "@paima/providers/*": ["./packages/paima-sdk/paima-providers/*"],
       "@paima/rest/*": ["./packages/engine/paima-rest/*"],
       "@paima/runtime/*": ["./packages/engine/paima-runtime/*"],
@@ -52,7 +55,6 @@
       "@paima/sm/*": ["./packages/engine/paima-sm/*"],
       "@paima/utils-backend/*": ["./packages/node-sdk/paima-utils-backend/*"],
       "@paima/utils/*": ["./packages/paima-sdk/paima-utils/*"],
-      "@paima/precompiles/*": ["./packages/paima-sdk/paima-precompiles/*"],
       "@standalone/paima-batcher/*": ["./packages/batcher/batcher-standalone/*"],
       "@standalone/paima-engine/*": ["./packages/engine/paima-standalone/*"]
     }
