--- a/project.json
+++ b/project.json
@@ -13,7 +13,8 @@
       "options": {
         "port": 4873,
         "config": ".verdaccio/config.yml",
-        "storage": "bin/npm/tmp/local-registry/storage"
+        "storage": "bin/npm/tmp/local-registry/storage",
+        "scopes": ["@paima"]
       }
     }
   }
